# CreditMitra-engine

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agents.md  benchmark_extraction.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: statements.py
app/core/: config.py  scoring_config.py
app/schemas/: statements.py
app/services/: archetype.py  credit_scorer.py  extraction.py  feature_engineering.py  lifestyle_profile.py  merchant_classifier.py  merchant_enrichment.py  parsing.py  task_store.py
data/: india_merchants.json
docs/: enrichment_api.md  taxonomy.md
tests/: conftest.py  test_enrichment_privacy.py  test_enrichment_websearch_grounding.py  test_health.py  test_performance.py  test_persona_ranking.py
tests/fixtures/: README.md  sample_report.json  sample_transactions_enriched.json  sample_transactions_raw.json
tests/fixtures/personas/: 01_salaried_saver.json  02_gig_hustler.json  03_bnpl_heavy_spender.json  04_gambler.json  05_aspirational_overspender.json  06_cash_reliant_informal.json
